<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="service_url">http://tessi.fornax.uberspace.de/xmas/2/</string>
    <!-- <string name="service_url">http://172.16.57.33:4567/2/</string> -->
    <string name="meet4xmas_account">meet4xmas@googlemail.com</string>

    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_info">Please provide your email address for log in/register.</string>
    <string name="sign_up_confirm">Sign me up!</string><string name="app_name">Meet</string>

    <string name="menu_title">Meet4xmas</string>
    <string name="menu_create_appointment">Create Appointment</string>
    <string name="menu_list_appointments">Show Appointments</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="appointment_title">Appointment</string>
    <string name="appointment_what">What?</string>
    <string name="appointment_where">Where?</string>
    <string name="appointment_who">Who?</string>
    <string name="appointment_create">Create Appointment</string>
    <string name="appointment_where_prompt">Select a location</string>
    <string name="appointment_no_email">Contact has no email address</string>
    <string name="appointment_add_contact">Add Contact</string>
    <string name="appointment_remove_contact">Remove Contact?</string>
    <string-array name="appointment_where_options">
        <item>Christmas Market</item>
    </string-array>

    <string name="settings_registration_id">C2DM Registration ID</string>
    <string name="settings_travel_type">Default Travel Type</string>

    <string-array name="settings_travel_types">
        <item>Public Transportation</item>
        <item>Car</item>
        <item>Walk</item>
    </string-array>

    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>

    <string name="error_account_missing">Missing Account. You need to setup a Google account on this phone.</string>
    <string name="error_service_not_available">Push notification service unavailable</string>
    <string name="error_authentication_failed">Authentication failed, bad password.</string>
    <string name="error_too_many_registrations">Too many push registrations. You might want to uninstall some messy Apps.</string>
    <string name="error_invalid_sender">
        Invalid sender. The Meet4xmas team screwed up. Please contact them. They\'ll know what to do.
    </string>
    <string name="error_phone_registration_error">This phone does not seem to support push notifications.</string>
</resources>
