<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <!-- <TextView
        android:paddingLeft="20sp"
        android:paddingTop="20sp"
        android:paddingBottom="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:text="@string/appointment_title"
    /> -->
    <TextView
        android:paddingTop="20sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:paddingBottom="5sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/appointment_what"
    />
    <EditText
        android:id="@+id/appointment_what"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
    <TextView
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:paddingBottom="5sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/appointment_where"
    />
    <Spinner
        android:id="@+id/where_selection"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/appointment_where_prompt"
        android:entries="@array/appointment_where_options"
    />
    <TextView
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:paddingBottom="5sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/appointment_who"
    />
    <ListView
        android:id="@+id/who_list"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:paddingBottom="5sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
    <Button
        android:id="@+id/create_appointment_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/appointment_create" />
</LinearLayout>
