<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:padding="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:text="@string/sign_up_title" />

    <TextView
        android:paddingLeft="20sp"
        android:paddingBottom="20sp"
        android:paddingRight="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_info"/>

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_marginLeft="17sp"
        android:layout_marginRight="17sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_confirm"/>

</LinearLayout>
